# microsandbox-executor

./: .env.docker.example  .env.example  .gitignore  OPEN_SOURCE_SANDBOX_EVALUATION.md  README.md  docker-compose.yml  implementation_plan.md  justfile
demo/: .env.docker.example  README.md  docker-compose.yml
demo/server/: .env.example  Dockerfile  package.json
demo/server/src/: config.ts  executor-client.ts  server.ts  storage.ts
demo/web/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.ts
demo/web/src/: App.tsx  index.css
images/data-science-heavy-runtime/: Dockerfile  requirements.txt
images/data-science-runtime/: requirements.txt
images/ml-dl-runtime/: requirements.txt
python-client/: .gitignore  live_test.py  pyproject.toml
python-client/sandbox_executor_client/: __init__.py  client.py  models.py
python-client/tests/: test_client.py
service/: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  docker-compose.yml  package.json
service/src/: app.ts  config.ts  server.ts
service/src/jobs/: executor.ts  manifests.ts  models.ts  queue.ts
service/src/metadata/: store.ts
service/src/policy/: network.ts  restricted_exec.ts
service/src/routes/: execute.ts  health.ts  jobs.ts  sessions.ts
service/src/runtime/: docker_runtime.ts  microsandbox_runtime.ts  types.ts
service/src/sessions/: cleanup.ts  locks.ts
service/src/storage/: local.ts  minio.ts  (+4 more)
web/: Dockerfile  README.md  index.html  nginx.conf.template  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  vite-env.d.ts
(+18 files in other folders)
